// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert editor interactions > asks before discarding unsaved changes 1`] = `"Unsaved changes You have unsaved changes. Leave without saving? Stay Discard changes"`;

exports[`alert editor interactions > loads populated alert and registry fixture data 1`] = `
{
  "actionEditors": [
    {
      "role": "conditions-yaml-editor",
      "value": "- condition: state
  entity_id: binary_sensor.front_door
  state: on
  for: 00:05:00
",
    },
    {
      "role": "post-send-actions",
      "value": "- action: logbook.log
  data:
    name: Front door alert
",
    },
    {
      "role": "post-confirmation-actions",
      "value": "- action: light.turn_on
  target:
    entity_id:
      - light.hall
",
    },
  ],
  "conditionRows": 0,
  "confirmationEnabled": true,
  "intervalEnabled": true,
  "name": "Front door open",
  "selectedRecipients": [
    "Main phoneRemove",
    "PhoneRemove",
  ],
}
`;

exports[`alert editor interactions > opens template help in a modal from the notification section 1`] = `
"<section role="dialog" aria-modal="true" class="nc-modal nc-template-help-modal">
        <header class="nc-modal-header">
          <h2>Notification templates and helpers</h2>
          <button class="nc-icon-button" aria-label="Close template help" title="Close template help">
            <ha-icon icon="mdi:close"></ha-icon>
          </button>
        </header>
        <main class="nc-modal-body"><div class="nc-help">
          Recipients on selected devices, areas, floors, and labels receive
          direct notifications through Home Assistant's standard Notify
          service. Give conditions an ID in the Condition view, then use that
          ID in the message or title to choose text. For example:
          <code>{% if condition.front_door %}Door open{% elif
            condition.garage %}Garage open{% else %}All clear{% endif %}</code>.
        </div>
        <div class="nc-help">
          <code>alert_id</code>, <code>alert_name</code>,
          <code>alert_active</code>, <code>attempt</code>,
          <code>trigger</code>, <code>now</code>, and
          <code>condition.&lt;id&gt;</code> are available here. Home Assistant
          helpers are also available, such as
          <code>states('sensor.temperature')</code>,
          <code>state_attr('light.kitchen', 'brightness')</code>, and
          <code>is_state('binary_sensor.door', 'on')</code>.
        </div></main>
      </section>"
`;

exports[`alert editor interactions > previews unsaved data without requiring recipients 1`] = `
"id: draft_alert
name: Draft alert
enabled: true
description: ""
icon: mdi:bell-outline
conditions:
  - condition: template
    value_template: "{{ true }}"
monitor:
  on_change: true
  startup: true
  clear_on_inactive: false
notification:
  target: {}
  data:
    title: ""
    message: ""
confirmation:
  enabled: false
  buttons:
    - id: confirm
      label: Done
  notification:
    data:
      message: ""
    target: {}
  reminders:
    enabled: false
    interval: 1800
    max_attempts: 5
    show_attempts: false
    forget_after_enabled: false
    timeout: 900
  actions: []
"
`;

exports[`alert editor interactions > renders the Basic editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-input",
    "ha-selector:Description",
    "ha-icon-picker:Icon",
  ],
  "help": [],
  "title": "Basic",
}
`;

exports[`alert editor interactions > renders the Condition editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-code-editor:Native Home Assistant condition:yaml:conditions-yaml-editor",
  ],
  "help": [
    "Enter a Home Assistant condition as a template string, mapping, or list of mappings. YAML and JSON are supported.",
  ],
  "title": "Condition",
}
`;

exports[`alert editor interactions > renders the Confirmation editor section 1`] = `
{
  "buttons": [
    "Add response button",
  ],
  "controls": [
    "ha-input",
    "ha-input",
    "ha-switch",
  ],
  "help": [],
  "title": "Confirmation",
}
`;

exports[`alert editor interactions > renders the Notification editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-input",
    "ha-code-editor:Notification message:jinja2",
  ],
  "help": [],
  "title": "Notification",
}
`;

exports[`alert editor interactions > renders the Notify recipients when confirmed editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-code-editor:Confirmation message:jinja2",
  ],
  "help": [
    "Optionally send a follow-up message after acknowledgement.",
    "Example: Confirmed by {{confirmed_by}}",
  ],
  "title": "Notify recipients when confirmed",
}
`;

exports[`alert editor interactions > renders the Post-confirmation actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-code-editor:Post-confirmation actions:yaml:post-confirmation-actions",
  ],
  "help": [
    "Runs after a recipient confirms. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-confirmation actions",
}
`;

exports[`alert editor interactions > renders the Post-send actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-code-editor:Post-send actions:yaml:post-send-actions",
  ],
  "help": [
    "Runs after every notification send. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-send actions",
}
`;

exports[`alert editor interactions > renders the Recipients editor section 1`] = `
{
  "buttons": [
    "All",
    "Devices",
    "Areas",
    "Floors",
    "Labels",
    "Notification entities",
    "Users",
  ],
  "controls": [
    "ha-input",
  ],
  "help": [
    "Search for a recipient, choose a type when needed, then select it. You can mix devices, areas, labels, floors, and notification entities.",
    "Selected devices, areas, labels, floors, and notification entities are passed to Home Assistant's standard Notify service.",
  ],
  "title": "Recipients",
}
`;

exports[`alert editor interactions > renders the Reminder policy editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-selector:Duration",
    "ha-input",
    "ha-selector:Duration",
    "ha-switch",
    "ha-switch",
  ],
  "help": [
    "Set to 00:00:00 to keep the notification until confirmation.",
  ],
  "title": "Reminder policy",
}
`;

exports[`alert editor interactions > renders the When to check editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-switch",
    "ha-switch",
    "ha-switch",
    "ha-switch:interval-toggle",
    "ha-selector:Duration",
  ],
  "help": [
    "Condition changes are detected for referenced entities. Use a condition that references an entity, or use Test and interval checks for static templates.",
    "Re-checks the condition at this interval, even when no relevant entity-change event occurs.",
  ],
  "title": "When to check",
}
`;

exports[`alert editor interactions > saves an edited alert and closes the editor 1`] = `
{
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "Done",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "target": {
        "entity_id": [
          "notify.phone",
        ],
      },
    },
    "reminders": {
      "enabled": false,
      "forget_after_enabled": false,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
      "timeout": 900,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "editable_alert",
  "monitor": {
    "clear_on_inactive": false,
    "on_change": true,
    "startup": true,
  },
  "name": "Updated name",
  "notification": {
    "action": "notify.phone",
    "data": {
      "message": "",
      "title": "",
    },
    "target": {
      "entity_id": [
        "notify.phone",
      ],
    },
  },
}
`;

exports[`alert editor interactions > shows validation feedback instead of saving an unnamed alert 1`] = `
"<div class="nc-toast">
          Name is required.
        </div>"
`;

exports[`alert editor interactions > switches active sections and keeps the contextual title 1`] = `"<h2 data-role="editor-section-title">When to check</h2>"`;

exports[`recipient picker interactions > filters recipients and removes a selected target 1`] = `
{
  "entity_id": [
    "notify.tablet",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 1`] = `
{
  "entity_id": [
    "notify.phone",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 2`] = `"<span class="nc-target-chip" title="Notification entities">Phone<button class="nc-chip-remove">Remove</button></span>"`;
